# quickjs-rs

./: CHANGELOG.md  Cargo.toml  README.md  justfile  release.toml
examples/: eval.rs
libquickjs-sys/: Cargo.toml  README.md  build.rs  release.toml
libquickjs-sys/embed/: bindings.rs
libquickjs-sys/embed/patches/: dateparser.patch
libquickjs-sys/embed/quickjs/: quickjs.c
libquickjs-sys/src/: lib.rs
src/: callback.rs  console.rs  lib.rs  tests.rs
src/bindings/: compile.rs  convert.rs  mod.rs  value.rs
src/value/: bigint.rs  mod.rs
