[package]
edition = "2021"
name = "quick-js-dtp"
description = "QuickJS Javascript engine wrapper"
version = "0.4.1"
readme = "README.md"
repository = "https://github.com/Theta-Dev/quickjs-rs"
license = "MIT"
authors = ["Christoph Herzog <chris@theduke.at>", "ThetaDev <t.testboy@gmail.com>"]
keywords = ["quickjs", "javascript", "js", "engine", "interpreter"]

[lib]
name = "quick_js"

[package.metadata.docs.rs]
features = [ "chrono", "bigint", "log" ]

[features]
default = ["chrono"]
patch-bigint = ["libquickjs-dtp-sys/patch-bigint"]
patch-dateparser = ["libquickjs-dtp-sys/patch-dateparser"]
bigint = ["num-bigint", "num-traits", "libquickjs-dtp-sys/patch-bigint"]

[dependencies]
libquickjs-dtp-sys = { version = ">= 0.9.0, < 0.10.0", path = "./libquickjs-sys" }
chrono = { version = "0.4.7", optional = true }
num-bigint = { version = "0.4.0", optional = true }
num-traits = { version = "0.2.0", optional = true }
log = { version = "0.4.8", optional = true }
once_cell = "1.2.0"

[dev-dependencies]
rstest = "0.16.0"

[workspace]
members = [
    "libquickjs-sys",
]
