[package]
edition = "2021"
name = "libquickjs-dtp-sys"
description = "QuickJS Javascript Engine FFI bindings (with improved date parser)"
version = "0.10.0"
readme = "README.md"
repository = "https://github.com/Theta-Dev/quickjs-rs"
license = "MIT"
authors = ["Christoph Herzog <chris@theduke.at>", "ThetaDev <t.testboy@gmail.com>"]
categories = ["external-ffi-bindings"]
keywords = ["quickjs"]

build = "build.rs"

[lib]
name = "libquickjs_sys"

[features]
bundled = ["cc", "copy_dir"]
patch-bigint = ["bundled"]
patch-dateparser = ["bundled"]

default = ["bundled"]
system = ["bindgen"]

[build-dependencies]
bindgen = { version = "0.69.0", optional = true }
cc = { version = "1.0.66", optional = true }
copy_dir = { version = "0.1.2", optional = true }
